# complogic

./: .cursorignore  .replit  Cargo.toml  README.md  graph.dot  index.html
.github/workflows/: check.yml  rust.yml  tests.yml
assets/: manifest.json  sw.js
complogic/: Cargo.toml
complogic-gui/: Cargo.toml
complogic-gui/src/: app.rs  lib.rs  main.rs
complogic/src/: compile.rs  gates.rs  lib.rs
src/: app.rs  compile.rs  gates.rs  lib.rs  main.rs  simulation.rs
