[package]
name = "complogic"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.21.0"
egui_node_graph = { git = "https://github.com/setzer22/egui_node_graph", rev = "3068b8cd9bad3a419682af273c01cd700bda2739" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"]}

[features]
default = []
persistence = ["egui_node_graph/persistence", "eframe/persistence"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"